--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 title: Muthudinesh
 description: Product Designer
-theme: minima
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 # "minima" is the standard, clean, blog-style theme perfect for what you described.
 # It looks very similar to the CSS I gave you earlier but is more powerful.
-
-plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
+ 
